@@ -25,6 +25,9 @@ import org.apache.hadoop.util.Tool;
 import org.apache.hadoop.util.ToolRunner;
 import org.apache.hama.bsp.BSPMaster;
 
+/**
+ * This class starts and runs the BSPMaster
+ */
 public class BSPMasterRunner extends Configured implements Tool {
 
   public static final Log LOG = LogFactory.getLog(BSPMasterRunner.class);
