@@ -24,6 +24,9 @@ import org.apache.hadoop.util.Tool;
 import org.apache.hadoop.util.ToolRunner;
 import org.apache.hama.zookeeper.QuorumPeer;
 
+/**
+ * This class starts and runs the ZooKeeperServer
+ */
 public class ZooKeeperRunner extends Configured implements Tool {
 
   public static final Log LOG = LogFactory.getLog(ZooKeeperRunner.class);
