@@ -18,6 +18,6 @@
 -->
 
 <body>
-BSP package of Hama is a framework for developing BSP-style applications
+BSP computing framework.
 </body>
 </html>
