@@ -18,6 +18,6 @@
 -->
 
 <body>
-The Hama Overview.
+Tools to help define network clients and servers. 
 </body>
 </html>
