@@ -18,6 +18,6 @@
 -->
 
 <body>
-Numerical and variable utilities
+Common utilities. 
 </body>
 </html>
