@@ -18,6 +18,6 @@
 -->
 
 <body>
-The Hama Overview.
+Tools to start the ZooKeeper server and quorum peers.
 </body>
 </html>
